--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   //  p2p chatt
 
   // 1. connect 
-  var socket = io.connect('http://localhost:3000');
+  var socket = io.connect('/');
    var localTime;
  
   socket.on('onconnected', function (data) {
